<resources>
    <string name="app_name">Gario</string>
    <!-- Inicio_Sesion_Gario -->
    <string name="login">Login</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="no_tienes_cuenta">¿No tienes Cuenta?</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarme">Registrarme</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="eslogan">Tu Mejor Opción Para El Ahorro Inteligente</string>
    <string name="cambio">¡Inicia Tu Cambio Ahora!</string>

    <!-- Inicio_sesion_user -->
    <string name="nombre_de_usuario">Nombre De Usuario</string>
    <string name="Email">Email</string>
    <string name="Contraseña">Contraseña</string>
    <string name="edad">Edad</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="bienvenido_a_gario">Bienvenid@ a Gario</string>
    <string name="o">ó</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta? Iniciar sesión</string>

    <!-- registro_gario_user -->
    <string name="es_tu_primera_vez">¿Es Tu Primera Vez?</string>
    <string name="olvidate_tu_contraseña">¿Olvidaste Tú Contraseña?</string>
    <string name="registrate">Registrate</string>
    <string name="mostrar_contraseña">Mostrar Contraseña</string>
    <string name="title_activity_inicio_gario">Inicio_Gario</string>

    <!-- inicio_gario -->
    <string name="inicio">Inicio</string>
    <string name="historial">Historial</string>
    <string name="informes">Informes</string>
    <string name="abrir_menu">Abrir menú</string>
    <string name="cerrar_menu">Cerrar menú</string>
    <string name="dinero">Dinero</string>
    <string name="cerrar">Cerrar</string>
    <string name="Camara">Camara</string>
    <string name="nuevo_ingreso">Nuevo Ingreso</string>
    <string name="nuevo_gasto">Nuevo Gasto</string>
    <string name="ultimos_movimientos">Ultimos Movimientos</string>
    <string name="hormiga_decorativa">Hormiga decorativa</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="max">Max</string>

    <!-- Simulaciones de montos (Buenas Practicas) -->
    <string name="monto_actual">Monto actual: $%1$d</string>
    <string name="gastos_mes">Gastos este mes: $%1$d</string>
    <string name="monto_formato">$%1$d</string>

    <!-- menu_abajo -->
    <string name="home">home</string>
    <string name="billete">billete</string>
    <string name="vehiculo">vehiculo</string>

    <!-- activity_registrar_ingreso-->
    <string name="registrar_ingreso">Registrar Ingreso</string>
    <string name="monto">Monto:</string>
    <string name="plata">$0.00</string>
    <string name="Categoria">Categoria</string>
    <string name="selecciona">Selecciona o busca categoría</string>
    <string name="tipo_de_ingreso">Tipo De Ingreso</string>
    <string name="metodo_de_pago">Metodo De Pago</string>
    <string name="fecha">Fecha</string>
    <string name="seleccione_fecha">Seleccione Fecha:</string>
    <string name="motivo">Motivo De Ingreso (Opcional)</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ejemplo">Ej: almuerzo, transporte</string>

    <!-- activity_registrar_ingreso-->
    <string name="registrar_gasto">Registrar Gasto</string>
    <string name="tipo_de_gasto">Tipo De Gasto</string>
    <string name="motivo2">Motivo De Gasto (Opcional)</string>

    <string-array name="metodo_de_ingreso">
        <item>Salario</item>
        <item>Pension</item>
        <item>Prestamo</item>
        <item>Tarjeta De Credito</item>
        <item>Otro</item>
    </string-array>

    <string-array name="tipo_de_gasto">
        <item>Si</item>
        <item>No</item>

    </string-array>



</resources>