<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro_ingreso"
    android:fitsSystemWindows="true">

    <!-- MENÚ LATERAL -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/menu" />

    <!-- CONTENIDO PRINCIPAL -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:fitsSystemWindows="true">

            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                android:elevation="0dp"
                android:theme="@style/ToolbarThemeLight"
                app:title="Registro de Ingreso"
                app:titleTextColor="#0F0D3E"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <!-- Línea azul -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0F0D3E" />

            <!-- FORMULARIO SCROLLEABLE -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Título -->
                    <TextView
                        android:id="@+id/textTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registrar_ingreso"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="#0F0D3E"
                        android:layout_marginBottom="8dp"/>

                    <!-- CardView para formulario -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp"
                        android:backgroundTint="#FFFFFF">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="12dp">

                            <!-- Monto -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/monto"
                                android:textSize="14sp"
                                android:textColor="#0F0D3E"/>

                            <EditText
                                android:id="@+id/editMonto"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:inputType="numberDecimal"
                                android:hint="@string/plata"
                                android:layout_marginBottom="8dp"
                                android:background="@drawable/borde_redondo"
                                android:paddingStart="5dp"
                                android:paddingEnd="5dp"/>

                            <!-- Categoría (con búsqueda) -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Categoria"
                                android:textSize="14sp"
                                android:textColor="#0F0D3E"/>

                            <AutoCompleteTextView
                                android:id="@+id/autoCompleteCategoria"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:hint="@string/selecciona"
                                android:background="@drawable/borde_redondo"
                                android:layout_marginBottom="12dp"
                                android:inputType="text"
                                android:paddingStart="5dp"
                                android:paddingEnd="5dp"/>

                            <!-- Tipo de gasto (hormiga o no) -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tipo_de_gasto"
                                android:textSize="14sp"
                                android:textColor="#0F0D3E"/>

                            <Spinner
                                android:id="@+id/spinnerTipoGasto"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:background="@drawable/borde_redondo"
                                android:layout_marginBottom="12dp"/>

                            <!-- Metodo de pago -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/metodo_de_pago"
                                android:textSize="14sp"
                                android:textColor="#0F0D3E"/>

                            <Spinner
                                android:id="@+id/spinnerMetodoPago"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:background="@drawable/borde_redondo"
                                android:layout_marginBottom="12dp"/>

                            <!-- Fecha -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fecha"
                                android:textSize="14sp"
                                android:textColor="#0F0D3E"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center_vertical"
                                android:layout_marginBottom="8dp"
                                android:background="@drawable/movimiento_fondo">

                                <EditText
                                    android:id="@+id/editFecha"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="48dp"
                                    android:hint="@string/seleccione_fecha"
                                    android:focusable="false"
                                    android:clickable="true"
                                    android:paddingStart="12dp"
                                    android:paddingEnd="5dp"
                                    android:background="@android:color/transparent"/>

                                <ImageView
                                    android:id="@+id/iconCalendar"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:src="@drawable/calendario"
                                    android:paddingEnd="12dp" />
                            </LinearLayout>

                            <!-- Motivo del gasto (opcional) -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/motivo"
                                android:textSize="14sp"
                                android:textColor="#0F0D3E"/>

                            <EditText
                                android:id="@+id/editMotivo"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:hint="@string/ejemplo"
                                android:gravity="top"
                                android:inputType="textMultiLine"
                                android:background="@drawable/borde_redondo"
                                android:layout_marginBottom="8dp"
                                android:paddingStart="5dp"
                                android:paddingEnd="5dp"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <!-- Botones -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="8dp">

                        <Button
                            android:id="@+id/btnCancelar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cancelar"
                            android:textSize="14sp"
                            android:backgroundTint="#F67A29"
                            android:textColor="#FFFFFF"
                            android:layout_marginEnd="12dp"/>

                        <Button
                            android:id="@+id/btnAceptar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/aceptar"
                            android:textSize="14sp"
                            android:backgroundTint="#F67A29"
                            android:textColor="#FFFFFF"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </FrameLayout>
</androidx.drawerlayout.widget.DrawerLayout>
